[project]
name = "databricks_python_wheel-0.1.0-py3-none-any"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "databricks-cli>=0.18.0",
    "dotenv>=0.9.9",
    "pyspark>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/sf_data"
]

[project.scripts]
run_pipeline = "sf_data.main:main"

[tool.coverage.run]
source = [
    "./src",
]
